--- a/SharedCode/build.gradle
+++ b/SharedCode/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'kotlin-multiplatform'
+apply plugin: 'kotlinx-serialization'
 
 kotlin {
     targets {
@@ -13,14 +14,31 @@ kotlin {
     }
 
     sourceSets {
-        //commonMain.kotlin.srcDir 'commonMain/kotlin'
         commonMain.dependencies {
             api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
+            implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
+
+            implementation "io.ktor:ktor-client-core:$ktor_version"
+            implementation "io.ktor:ktor-client-json:$ktor_version"
         }
 
-        //androidMain.kotlin.srcDir 'src'
         androidMain.dependencies {
             api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+            implementation "io.ktor:ktor-client-android:$ktor_version"
+            //implementation "io.ktor:ktor-client-core-android:$ktor_version"
+            //implementation "io.ktor:ktor-client-json-android:$ktor_version"
+        }
+        iosMain {
+            dependencies {
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:$coroutines_version"
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$serialization_version"
+
+                implementation "io.ktor:ktor-client-ios:$ktor_version"
+                implementation "io.ktor:ktor-client-core-ios:$ktor_version"
+                implementation "io.ktor:ktor-client-json-ios:$ktor_version"
+            }
         }
     }
 }
