--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,59 @@
 buildscript {
     ext.kotlin_version = '1.3.0-rc-146'
-    repositories {
-        google()
-        jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap' }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha13'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+    ext.coroutines_version = '0.26.1-rc-conf2'
+    ext.serialization_version = '0.8.1-rc13'
+    ext.ktor_version = '1.0.0-alpha-3'
 }
 
 allprojects {
+    buildscript {
+        repositories {
+            maven { url "http://kotlin.bintray.com/kotlin-eap" }
+            maven { url "http://kotlin.bintray.com/kotlin-dev" }
+            maven { url "https://kotlin.bintray.com/kotlinx" }
+            maven { url 'https://dl.bintray.com/jetbrains/kotlin-native-dependencies' }
+            maven { url "https://dl.bintray.com/kotlin/ktor/" }
+            maven { url "https://dl.bintray.com/kotlin/kotlinx/" }
+
+            google()
+            jcenter()
+        }
+        dependencies {
+            classpath 'com.android.tools.build:gradle:3.3.0-alpha13'
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+            classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        }
+    }
     repositories {
+        maven { url "http://kotlin.bintray.com/kotlin-eap" }
+        maven { url "http://kotlin.bintray.com/kotlin-dev" }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url "https://dl.bintray.com/sargunster/maven" }
+        maven { url "https://dl.bintray.com/kotlin/squash" }
+        maven { url "https://dl.bintray.com/russhwolf/multiplatform-settings" }
+        maven { url "https://dl.bintray.com/kotlin/ktor/" }
+        maven { url "https://dl.bintray.com/kotlin/kotlinx/" }
+
         google()
         jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
+}
+
+repositories {
+    maven { url "http://kotlin.bintray.com/kotlin-eap" }
+    maven { url "http://kotlin.bintray.com/kotlin-dev" }
+    maven { url "https://kotlin.bintray.com/kotlinx" }
+    maven { url "https://dl.bintray.com/sargunster/maven" }
+    maven { url "https://dl.bintray.com/kotlin/squash" }
+    maven { url "https://dl.bintray.com/russhwolf/multiplatform-settings" }
+    maven { url "https://dl.bintray.com/kotlin/ktor/" }
+    maven { url "https://dl.bintray.com/kotlin/kotlinx/" }
+
+    google()
+    jcenter()
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
