--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.3.0-rc-146'
-    ext.coroutines_version = '0.26.1-rc-conf2'
+    ext.coroutines_version = '0.30.0-eap13'
     ext.serialization_version = '0.8.1-rc13'
     ext.ktor_version = '1.0.0-alpha-3'
 }
@@ -9,6 +9,7 @@ allprojects {
     buildscript {
         repositories {
             maven { url "http://kotlin.bintray.com/kotlin-eap" }
+            maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
             maven { url "http://kotlin.bintray.com/kotlin-dev" }
             maven { url "https://kotlin.bintray.com/kotlinx" }
             maven { url 'https://dl.bintray.com/jetbrains/kotlin-native-dependencies' }
@@ -27,6 +28,7 @@ allprojects {
     repositories {
         maven { url "http://kotlin.bintray.com/kotlin-eap" }
         maven { url "http://kotlin.bintray.com/kotlin-dev" }
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         maven { url "https://kotlin.bintray.com/kotlinx" }
         maven { url "https://dl.bintray.com/sargunster/maven" }
         maven { url "https://dl.bintray.com/kotlin/squash" }
@@ -42,6 +44,7 @@ allprojects {
 repositories {
     maven { url "http://kotlin.bintray.com/kotlin-eap" }
     maven { url "http://kotlin.bintray.com/kotlin-dev" }
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     maven { url "https://kotlin.bintray.com/kotlinx" }
     maven { url "https://dl.bintray.com/sargunster/maven" }
     maven { url "https://dl.bintray.com/kotlin/squash" }
