--- a/SharedCode/build.gradle
+++ b/SharedCode/build.gradle
@@ -19,6 +19,8 @@ kotlin {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib"
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
                 implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-common:$serialization_version"
+                //implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-jsonparser:0.6.2"
+
 
                 implementation "io.ktor:ktor-client-core:$ktor_version"
                 implementation "io.ktor:ktor-client-json:$ktor_version"
@@ -41,10 +43,9 @@ kotlin {
         iOSMain{
             dependencies {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-                //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:0.23.4-native-1"
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:$coroutines_version"
                 implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$serialization_version"
+                //implementation "org.jetbrains.kotlinx:jsonparser-native:0.6.2"
 
                 implementation "io.ktor:ktor-client-ios:$ktor_version"
                 implementation "io.ktor:ktor-client-core-ios:$ktor_version"
