--- a/gradle.properties
+++ b/gradle.properties
@@ -12,14 +12,14 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
-//kotlin.code.style=official
+#kotlin.code.style=official
 # gradle
 org.gradle.parallel=true
 
 # kotlin
 kotlin.incremental.multiplatform = true
 
-kotlin_version=1.3.0-rc-146
+kotlin_version=1.3.0-rc-190
 org.jetbrains.kotlin.native.version=0.9.2
 # kotlin libraries
 coroutines_version=0.26.1-rc-conf2
